--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 /* [Master Stylesheet v1.0] */
 /* :: :: 1.0 Import Fonts */
-@import url(css/monserrat.css);
+/*@import url(css/monserrat.css);*/
 /* :: 2.0 Import All CSS */
 @import url(css/bootstrap.min.css);
 @import url(css/owl.carousel.min.css);
